update leftover warehouse

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,4 @@ Com.Danliris.Service.Inventory.WebApi/appsettings.json
 #vscode
 .vscode/
 Com.Danliris.Service.Inventory.WebApi/appsettings.json
+Com.Ambassador.Service.Inventory.WebApi/appsettings.json
